# rusmt

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  test.smtlib
src/: assertion_set.rs  cli.rs  constants.rs  context.rs  lib.rs  main.rs  solver.rs
src/test/: generator.rs  mod.rs  test.rs
