[package]
name = "rusmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
smt2parser = "0.6.1"
strum = {version = "0.24.1", features = ["strum_macros"]}
itertools = "0.10.5"
clap = {version = "3.0.0", features = ["derive"]}
strum_macros = "0.24.3"
rand = "0.8.5"

